Ajout de la gestion des offres dans l'interface administrateur avec création, modification et suppression des offres

--- a/fastintern-site/src/Views/Admin/index.twig
+++ b/fastintern-site/src/Views/Admin/index.twig
@@ -21,7 +21,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">Gestion Offres</button>
                     <div class="dropdown-content">
-                        <a href="#" {% if app.request.get('_route') == 'gerer_offres' %}class="active"{% endif %}>Gérer Offres</a>
+                        <a href="/?uri=admin/offres" {% if app.request.get('_route') == 'gerer_offres' %}class="active"{% endif %}>Gérer Offres</a>
                         <a href="#" {% if app.request.get('_route') == 'voir_offres' %}class="active"{% endif %}>Voir Offres</a>
                     </div>
                 </div>
