Correction des liens de navigation dans l'interface administrateur

--- a/fastintern-site/src/Views/offre/offre_admin.twig
+++ b/fastintern-site/src/Views/offre/offre_admin.twig
@@ -13,8 +13,8 @@
             <span>FastIntern - Administration</span>
         </div>
         <nav>
-            <a href="/?uri=index">Accueil</a>
-            <a href="/?uri=admin/offres" class="active">Gestion des Offres</a>
+            <a href="/?uri=admin">Accueil</a>
+            <a href="/?uri=admin/offres" class="active">Gestiond es utilisateurs</a>
             <a href="/?uri=logout" class="btn-logout">Déconnexion</a>
         </nav>
     </header>
