Ajout des champs email, téléphone et adresse lors de l'insertion d'une entreprise dans le contrôleur AdminOffre, mise à jour du formulaire d'administration des offres.

--- a/fastintern-site/src/Views/offre/offre_admin.twig
+++ b/fastintern-site/src/Views/offre/offre_admin.twig
@@ -67,6 +67,16 @@
                     <input type="email" id="email_contact" name="email_contact" required>
                 </div>
 
+                <div class="form-group">
+                    <label for="telephone_contact">Téléphone de contact</label>
+                    <input type="tel" id="telephone_contact" name="telephone_contact">
+                </div>
+
+                <div class="form-group">
+                    <label for="adresse">Adresse de l'entreprise *</label>
+                    <input type="text" id="adresse" name="adresse" required>
+                </div>
+
                 <div class="form-actions">
                     <button type="submit" class="btn-submit">Enregistrer</button>
                     <button type="button" class="btn-cancel" onclick="toggleForm()">Annuler</button>
