Mise à jour des liens de navigation dans l'interface administrateur pour rediriger vers les bonnes routes

--- a/fastintern-site/src/Views/Admin/index.twig
+++ b/fastintern-site/src/Views/Admin/index.twig
@@ -28,7 +28,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">Gestion Entreprises</button>
                     <div class="dropdown-content">
-                        <a href="#" {% if app.request.get('_route') == 'gerer_entreprises' %}class="active"{% endif %}>Gérer Entreprises</a>
+                        <a href="/?uri=admin/entreprises" {% if app.request.get('_route') == 'gerer_entreprises' %}class="active"{% endif %}>Gérer Entreprises</a>
                         <a href="#" {% if app.request.get('_route') == 'voir_entreprises' %}class="active"{% endif %}>Voir Entreprises</a>
                     </div>
                 </div>
