--- a/fastintern-site/src/Views/entreprise/entreprise_admin.twig
+++ b/fastintern-site/src/Views/entreprise/entreprise_admin.twig
@@ -15,7 +15,7 @@
             <span>FastIntern - Administration</span>
         </div>
         <nav>
-            <a href="/?uri=index">Accueil</a>
+            <a href="/?uri=admin">Accueil</a>
             <a href="/?uri=admin/entreprises" class="active">Gestion des Entreprises</a>
         </nav>
     </header>
