--- a/fastintern-site/src/Views/entreprise/entreprise.twig
+++ b/fastintern-site/src/Views/entreprise/entreprise.twig
@@ -39,12 +39,14 @@
         </section>
 
     <div class="search-container">
-        <form method="GET">
-            <input type="text" name="search" placeholder="Rechercher votre entreprise ici ...">
+        <form method="GET" action="/index.php">
+            <input type="hidden" name="uri" value="entreprise">
+            <input type="text" name="search" placeholder="Rechercher votre entreprise ici ..." >
             <button type="submit">🔍</button>
-    </form>
+        </form>
     </div>
 
+    
 
         <div class="entreprises-container">
     {% for entreprise in entreprises %}
@@ -66,7 +68,6 @@
                     {% endif %}
                 {% endfor %}
             </div>
-            <button>Laisser un avis</button>
         </div>
     {% else %}
         <p>Aucune entreprise trouvée.</p>
@@ -76,19 +77,19 @@
          <!-- Pagination -->
 <div class="pagination">
     {% if currentPage > 1 %}
-        <a href="?uri=entreprise&page={{ currentPage - 1 }}" class="btn-pagination">⬅ Précédent</a>
+        <a href="?uri=entreprise&page={{ currentPage - 1 }}{% if search is not empty %}&search={{ search|e }}{% endif %}" class="btn-pagination">⬅ Précédent</a>
     {% endif %}
 
     {% for i in 1..totalPages %}
         {% if i == currentPage %}
             <span class="current-page">{{ i }}</span>
         {% else %}
-            <a href="?uri=entreprise&page={{ i }}" class="btn-pagination">{{ i }}</a>
+            <a href="?uri=entreprise&page={{ i }}{% if search is not empty %}&search={{ search|e }}{% endif %}" class="btn-pagination">{{ i }}</a>
         {% endif %}
     {% endfor %}
 
     {% if currentPage < totalPages %}
-        <a href="?uri=entreprise&page={{ currentPage + 1 }}" class="btn-pagination">Suivant ➡</a>
+        <a href="?uri=entreprise&page={{ currentPage + 1 }}{% if search is not empty %}&search={{ search|e }}{% endif %}" class="btn-pagination">Suivant ➡</a>
     {% endif %}
 </div>
    
