--- a/fastintern-site/src/Views/Auth/connexion.twig
+++ b/fastintern-site/src/Views/Auth/connexion.twig
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="http://fastintern-static.local/static/css/layout/header.css">
+    <link rel="stylesheet" href="http://fastintern-static.local/static/css/layout/footer.css">
     <link rel="stylesheet" href="http://fastintern-static.local/static/css/Auth/connexion.css">
-    <title>{{ page_title|default('Connexion | FastIntern') }}</title>
+    <title>{{ page_title|default('Connexion - FastIntern') }}</title>
 </head>
 <body>
     <header>
@@ -97,5 +99,7 @@
 </footer>
 
     <script src="http://fastintern-static.local/static/JS/Auth/connexion.js"></script>
+    <script src="http://fastintern-static.local/static/JS/layout/header.js"></script>
+    <script src="http://fastintern-static.local/static/JS/layout/footer.js"></script>
 </body>
 </html>
