Ajout de la gestion des entreprises dans le contrôleur AdminEntrepriseController et mise à jour des routes associées.

--- a/fastintern-site/src/Views/Admin/index.twig
+++ b/fastintern-site/src/Views/Admin/index.twig
@@ -31,7 +31,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">Gestion Entreprises</button>
                     <div class="dropdown-content">
-                        <a href="#">Gérer Entreprises</a>
+                        <a href="/?uri=admin_entreprises">Gérer Entreprises</a>
                         <a href="#">Voir Entreprises</a>
                     </div>
                 </div>
